--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
 dev = [
     "mypy>=1.18.2",
     "pylint>=4.0.3",
+    "pytest>=9.0.1",
+    "pytest-cov>=7.0.0",
 ]
 
 [tool.mypy]
