exp(): add mega-linter

--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+
+megalinter-reports/
+
+/run
+/run/**
