--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "mypy>=1.18.2",
+    "pre-commit>=4.5.0",
     "pylint>=4.0.3",
     "pytest>=9.0.1",
     "pytest-cov>=7.0.0",
