feat(#2): add `lint` branch trigger

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - main
+      - lint
     paths:
       - '.pre-commit-config.yaml'
       - '.pre-commit-hooks.yaml'
