--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -35,6 +35,8 @@ jobs:
       with:
         go-version: 1.17
       id: go
+    - name: Install checkmake
+      run: go install github.com/checkmake/checkmake/cmd/checkmake@latest
     - name: Install pre-commit
       run: |
         python -m pip install --upgrade pip
