--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,10 @@ dependencies = [
 dev = [
     "mypy>=1.18.2",
     "pre-commit>=4.5.0",
-    "pylint>=4.0.3",
     "pytest>=9.0.1",
     "pytest-cov>=7.0.0",
+    "ruff>=0.9.0",
+    "wemake-python-styleguide>=1.4.0",
 ]
 
 [tool.mypy]
@@ -26,3 +27,23 @@ warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 ignore_missing_imports = true
+
+[tool.ruff]
+line-length = 88
+target-version = "py313"
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = [
+    "D203", # one-blank-line-before-class (conflicts with D211)
+    "D213", # multi-line-summary-second-line (conflicts with D212)
+    "COM812", # trailing-comma-missing (conflicts with formatter)
+    "ISC001", # single-line-implicit-string-concatenation (conflicts with formatter)
+    "CPY001", # missing-copyright-notice
+]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["S101", "PLR2004", "SLF001", "D100", "D101", "D102", "ANN201", "ANN001", "ARG002"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
