--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
--   repo: https://github.com/checkmake/checkmake.git
+  - repo: https://github.com/checkmake/checkmake.git
     # Or another commit hash or version
     rev: 0.2.2
     hooks:
@@ -7,3 +7,42 @@ repos:
 #    -   id: checkmake
     # OR Use this hook to use a pre-installed checkmake executable
      -   id: checkmake-system
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.9.0
+    hooks:
+      - id: ruff
+        args: [ --fix ]
+      - id: ruff-format
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.5.0
+    hooks:
+      - id: detect-secrets
+        args: [ '--baseline', '.secrets.baseline' ]
+        exclude: package.lock.json
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.13.0
+    hooks:
+      - id: mypy
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.1.1
+    hooks:
+      - id: flake8
+        additional_dependencies: [wemake-python-styleguide]
+  - repo: local
+    hooks:
+      - id: markdownlint
+        name: markdownlint
+        entry: markdownlint
+        language: system
+        files: \.md$
+        exclude: ^\.junie/
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: system
+        files: \.py$
+      - id: flake8
+        name: flake8
+        entry: flake8
+        language: system
+        files: \.py$
