--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -37,6 +37,10 @@ jobs:
       id: go
     - name: Install checkmake
       run: go install github.com/checkmake/checkmake/cmd/checkmake@latest
+    - name: Install markdownlint, mypy, and flake8
+      run: |
+        npm install -g markdownlint-cli
+        pip install mypy flake8
     - name: Install pre-commit
       run: |
         python -m pip install --upgrade pip
