--- a/template/.env.template
+++ b/template/.env.template
@@ -3,6 +3,6 @@ DC_TELEGRAM_API_HASH=
 DC_TELEGRAM_PHONE=
 
 DC_CHAT_ID=
-DC_SHORTCUT_NAME="Notify Telegram Message"
+DC_SHORTCUT_NAME=Notify Telegram Message
 
 DC_DATA_DIR=run
