--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -32,4 +32,6 @@ jobs:
     - uses: actions/setup-python@v5
     - name: Install the latest version of uv
       uses: astral-sh/setup-uv@v7
+    - name: Install dependencies
+      run: uv sync
     - uses: pre-commit/action@v3.0.1
