feat(lint): update linting workflows for markdown and pre-commit configurations

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -5,24 +5,10 @@ on:
     branches:
       - master
       - main
-      - lint
-    paths:
-      - '.pre-commit-config.yaml'
-      - '.pre-commit-hooks.yaml'
-      - 'Makefile'
-      - 'makefile'
-      - 'GNUmakefile'
-      - '**.mk'
-      - '**.make'
   push:
-    paths:
-      - '.pre-commit-config.yaml'
-      - '.pre-commit-hooks.yaml'
-      - 'Makefile'
-      - 'makefile'
-      - 'GNUmakefile'
-      - '**.mk'
-      - '**.make'
+    branches:
+      - master
+      - main
 
 jobs:
   pre-commit:
@@ -30,6 +16,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
+      with:
+        python-version-file: "pyproject.toml"
     - name: Install the latest version of uv
       uses: astral-sh/setup-uv@v7
     - name: Install dependencies
