--- a/.github/workflows/lint-markdown.yml
+++ b/.github/workflows/lint-markdown.yml
@@ -4,10 +4,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "**/*.md"
   pull_request:
     branches:
       - main
       - lint
+    paths:
+      - "**/*.md"
 
 jobs:
   lint:
