--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,28 +1,14 @@
-name: Lint Makefile
+name: Pre Commit
 
 on:
   pull_request:
     branches:
       - master
       - main
-      - lint
-    paths:
-      - '.pre-commit-config.yaml'
-      - '.pre-commit-hooks.yaml'
-      - 'Makefile'
-      - 'makefile'
-      - 'GNUmakefile'
-      - '**.mk'
-      - '**.make'
   push:
-    paths:
-      - '.pre-commit-config.yaml'
-      - '.pre-commit-hooks.yaml'
-      - 'Makefile'
-      - 'makefile'
-      - 'GNUmakefile'
-      - '**.mk'
-      - '**.make'
+    branches:
+      - master
+      - main
 
 jobs:
   pre-commit:
@@ -30,23 +16,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
-    - name: Set up Go
-      uses: actions/setup-go@v5
       with:
-        go-version: 1.22
-      id: go
-    - name: Install checkmake
-      run: go install github.com/checkmake/checkmake/cmd/checkmake@latest
-    - name: Install markdownlint, mypy, and flake8
-      run: |
-        npm install -g markdownlint-cli
-        pip install mypy flake8
-    - name: Install pre-commit
-      run: |
-        python -m pip install --upgrade pip
-        pip install "pre-commit>=4.5.0"
-    - name: Run pre-commit
-      run: |
-        pre-commit run --all-files
-      # We don't want a non-zero exit here to block CI in this linter-only workflow
-      # (change behavior if you want failures to fail the job).
+        python-version-file: "pyproject.toml"
+    - name: Install the latest version of uv
+      uses: astral-sh/setup-uv@v7
+    - name: Install dependencies
+      run: uv sync
+    - uses: pre-commit/action@v3.0.1
