--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dev = [
     "codespell==2.3.0",
     "dotenv-linter>=0.7.0",
     "flake8>=7.3.0",
+    "flake8-eradicate>=1.5.0",
 ]
 
 [tool.mypy]
