--- a/setup.cfg
+++ b/setup.cfg
@@ -1,37 +1,91 @@
-[flake8]
-# WPS settings
-max-module-members = 12
-max-local-variables = 10
-max-line-length = 88
-inline-quotes = double
+# All configuration for plugins and other utils is defined here.
+# Read more about `setup.cfg`:
+# https://docs.python.org/3/distutils/configfile.html
 
-# Ignore some checks that might conflict with Ruff or are too strict
-ignore =
-    # Common Flake8 ignores
-    W503,
-    # WPS: Allow f-strings
-;    WPS305,
-    # WPS: Allow implicit string concatenation (handled by formatter)
-;    WPS326,
-    # WPS: Allow standard imports that might be flagged
-;    WPS402,
-    # WPS: Found incorrect module name pattern (we use main.py)
-;    WPS100,
-;     WPS: Found logic inside __init__ module (we don't have logic there, but tests might)
-;    WPS412,
-    # WPS: Found method without arguments (style choice)
-;    WPS602,
-    # WPS: Found outer scope names shadowing (often unavoidable with environ)
-;    WPS442,
-    # Docstyle checks (handled by Ruff)
-    D100, D101, D102, D103, D104, D105, D106, D107,
-    # WPS: Found upper-case constant in a class (we don't use classes much)
-;    WPS115,
-    # WPS: Found complex f-string
-;    WPS237,
-    # WPS: Found string constant over-use (often false positive with keys)
-;    WPS226
+
+[flake8]
+format = wemake
+show-source = true
+doctests = true
+statistics = false
+
+# Plugins:
+max-complexity = 6
+max-line-length = 80
+
+extend-exclude =
+  .venv
+  # Custom:
+  dotenv_linter/grammar/parsetab.py
+
+select = WPS
 
 per-file-ignores =
-    # Allow asserts in tests
-    tests/*.py: S101, WPS432, WPS202, WPS226, WPS442
+  # Disable some rules for grammar definition:
+  dotenv_linter/grammar/parser.py: WPS336
+  dotenv_linter/grammar/lexer.py: WPS336
+  # There are multiple assert`s, and subprocesses in tests:
+  tests/*.py: WPS226
+
+
+[tool:pytest]
+# pytest config: http://doc.pytest.org/en/latest/customize.html
+
+# Strict `@xfail` by default:
+xfail_strict = true
+# Fail on warnings:
+filterwarnings =
+  error
+
+# You will need to measure your tests speed with `-n auto` and without it,
+# so you can see whether it gives you any performance gain, or just gives
+# you an overhead. See `docs/template/development-process.rst`.
+addopts =
+  --strict-markers
+  --strict-config
+  --doctest-modules
+  --cov=dotenv_linter
+  --cov-branch
+  --cov-report=term:skip-covered
+  --cov-report=html
+  --cov-report=xml
+  --cov-fail-under=97
+  # Ignore unrelated files:
+  --ignore=docs
+
+
+[coverage:run]
+# Coverage configuration:
+# https://coverage.readthedocs.io/en/latest/config.html
+
+# Required since 7.10:
+patch = subprocess
+
+
+[mypy]
+# The mypy configurations: http://bit.ly/2zEl9WI
+enable_error_code =
+  truthy-bool,
+  truthy-iterable,
+  redundant-expr,
+  unused-awaitable,
+  # ignore-without-code,
+  possibly-undefined,
+  redundant-self,
+  unimported-reveal,
+  deprecated,
+
+disallow_any_explicit = false
+ignore_missing_imports = true
+strict = true
+strict_bytes = true
+local_partial_types = true
+warn_unreachable = true
+
+[mypy-dotenv_linter.grammar.parsetab]
+ignore_errors = true
+
+
+[codespell]
+# codespell configuration: https://pypi.org/project/codespell
+skip = __pycache__,_build,.mypy_cache
