qa(reuse): add reuse tools to the pre-commit hook and a GitHub Actions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,11 @@ repos:
     rev: v6.2.0
     hooks:
       - id: reuse
+      - id: reuse-lint-file
+  - repo: https://codeberg.org/fsfe/reuse-tool
+    rev: v6.2.0
+    hooks:
+      - id: reuse
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.35.0
     hooks:
