--- a/REUSE.toml
+++ b/REUSE.toml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2025 Roman Lupashko (CuberHuber)
+# SPDX-FileCopyrightText: Copyright (C) 2025 Roman Lupashko (CuberHuber)
 # SPDX-License-Identifier: MIT
 
 version = 1
@@ -7,7 +7,10 @@ path = [
     ".DS_Store",
     ".gitattributes",
     ".gitignore",
+    ".aiignore",
+    ".pylintrc",
     ".pdd",
+    ".secrets.baseline",
     "**.json",
     "**.md",
     "**.txt",
@@ -22,9 +25,13 @@ path = [
     "**/*.png",
     "**/*.svg",
     "**/*.txt",
+    "**/*.lock",
+    "**/*.template",
     "README.md",
-    "renovate.json"
+    "pyproject.toml",
+    "renovate.json",
+
 ]
 precedence = "override"
-SPDX-FileCopyrightText = "Copyright (c) 2025 Roman Lupashko (CuberHuber)"
+SPDX-FileCopyrightText = "Copyright (C) 2025 Roman Lupashko (CuberHuber)"
 SPDX-License-Identifier = "MIT"
