--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Copyright (C) 2025 Roman Lupashko (CuberHuber)
+# SPDX-License-Identifier: MIT
 # All configuration for plugins and other utils is defined here.
 # Read more about `setup.cfg`:
 # https://docs.python.org/3/distutils/configfile.html
