--- a/.github/workflows/lint-make.yml
+++ b/.github/workflows/lint-make.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Copyright (C) 2025 Roman Lupashko (CuberHuber)
+# SPDX-License-Identifier: MIT
 name: Lint Makefile
 
 on:
