--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
-# SPDX-FileCopyrightText: 2020 Free Software Foundation Europe e.V.
-# SPDX-License-Identifier: CC0-1.0
+# SPDX-FileCopyrightText: Copyright (C) 2025 Roman Lupashko (CuberHuber)
+# SPDX-License-Identifier: MIT
 repos:
   - repo: https://codeberg.org/fsfe/reuse-tool
     rev: v6.2.0
