--- a/.github/workflows/makelint.yml
+++ b/.github/workflows/makelint.yml
@@ -19,7 +19,8 @@ on:
       - '**.make'
 
 jobs:
-  checkmake:
+  build:
+    timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
