--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -12,6 +12,9 @@ on:
       - main
 jobs:
   actionlint:
+    permissions:
+      contents: read
+      pull-requests: write
     timeout-minutes: 15
     runs-on: ubuntu-24.04
     steps:
