--- a/.github/workflows/makelint.yml
+++ b/.github/workflows/makelint.yml
@@ -20,6 +20,9 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: read
+      pull-requests: write
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
