--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,7 +17,10 @@ on:
       - "**/*.pyc"
 
 jobs:
-  test:
+  build:
+    permissions:
+      contents: read
+      pull-requests: write
     name: Run tests and collect coverage
     runs-on: ubuntu-latest
     steps:
