--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dev = [
     "dotenv-linter>=0.7.0",
     "flake8>=7.3.0",
     "flake8-eradicate>=1.5.0",
+    "pytest-asyncio>=1.3.0",
+    "pytest-mock>=3.15.1",
 ]
 
 [tool.mypy]
