--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,20 +24,19 @@ jobs:
     name: Run tests and collect coverage
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v6
+      - uses: actions/checkout@v6
         with:
           fetch-depth: 2
-
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
       - name: Set up Python
         uses: actions/setup-python@v6
-
+        with:
+          python-version-file: "pyproject.toml"
       - name: Install dependencies
-        run: pip install pytest pytest-cov
-
+        run: uv sync
       - name: Run tests
-        run: pytest --cov --cov-branch --cov-report=xml
-
+        run: uv run pytest --cov --cov-branch --cov-report=xml
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
         with:
