fix(coverage): fix codecov config, lowered cov-fail-under limit to 60%

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@
 format = wemake
 show-source = true
 doctests = true
-statistics = false
+statistics = true
 
 # Plugins:
 max-complexity = 6
@@ -17,17 +17,13 @@ max-line-length = 80
 
 extend-exclude =
   .venv
-  # Custom:
-  dotenv_linter/grammar/parsetab.py
+  tests/*.py
 
 select = WPS
 
 per-file-ignores =
-  # Disable some rules for grammar definition:
-  dotenv_linter/grammar/parser.py: WPS336
-  dotenv_linter/grammar/lexer.py: WPS336
   # There are multiple assert`s, and subprocesses in tests:
-  tests/*.py: WPS226
+  tests/*.py: WPS226, S101
 
 
 [tool:pytest]
@@ -46,12 +42,12 @@ addopts =
   --strict-markers
   --strict-config
   --doctest-modules
-  --cov=dotenv_linter
+  --cov=main
   --cov-branch
   --cov-report=term:skip-covered
   --cov-report=html
   --cov-report=xml
-  --cov-fail-under=97
+  --cov-fail-under=60
   # Ignore unrelated files:
   --ignore=docs
 
