--- a/.github/workflows/makelint.yml
+++ b/.github/workflows/makelint.yml
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Copyright (C) 2025 Roman Lupashko (CuberHuber)
+# SPDX-License-Identifier: MIT
 name: Lint Makefile
 
 on:
@@ -17,15 +19,18 @@ on:
       - '**.make'
 
 jobs:
-  checkmake:
+  build:
+    permissions:
+      contents: read
+      pull-requests: write
+    timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: actions/setup-python@v6
-      - name: Set up Go 1.17
+      - name: Set up Go 1.25
         uses: actions/setup-go@v6
         with:
-          go-version: 1.17
+          go-version: 1.25
         id: go
       - run: go install github.com/checkmake/checkmake/cmd/checkmake@latest
       - run: checkmake Makefile
