--- a/.github/workflows/pythonlint.yml
+++ b/.github/workflows/pythonlint.yml
@@ -1,23 +1,34 @@
+# SPDX-FileCopyrightText: Copyright (C) 2025 Roman Lupashko (CuberHuber)
+# SPDX-License-Identifier: MIT
 name: Lint Python Code
 
 on:
   push:
     branches:
       - main
+    paths:
+      - "**/*.py"
+      - "**/*.pyc"
   pull_request:
     branches:
       - main
-      - lint
+    paths:
+      - "**/*.py"
+      - "**/*.pyc"
 
 jobs:
   build:
+    permissions:
+      contents: read
+      pull-requests: write
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v7
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version-file: "pyproject.toml"
       - name: Install dependencies
