--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,12 @@
-# SPDX-FileCopyrightText: 2020 Free Software Foundation Europe e.V.
-# SPDX-License-Identifier: CC0-1.0
+# SPDX-FileCopyrightText: Copyright (C) 2025 Roman Lupashko (CuberHuber)
+# SPDX-License-Identifier: MIT
 repos:
   - repo: https://codeberg.org/fsfe/reuse-tool
     rev: v6.2.0
     hooks:
       - id: reuse
+      - id: reuse-lint-file
+
   - repo: https://github.com/python-jsonschema/check-jsonschema
     rev: 0.35.0
     hooks:
@@ -21,6 +23,7 @@ repos:
       - id: actionlint
         additional_dependencies:
           - "github.com/wasilibs/go-shellcheck/cmd/shellcheck@latest"
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
@@ -36,6 +39,7 @@ repos:
         args: ["--fix=lf"]
       - id: detect-private-key
       - id: check-case-conflict
+
   - repo: https://github.com/wemake-services/dotenv-linter
     rev: 0.7.0
     hooks:
@@ -74,7 +78,6 @@ repos:
     rev: v0.19.1
     hooks:
     - id: markdownlint-cli2
-      exclude: ^\.junie/
 
 ci:
   autofix_commit_msg: "[pre-commit.ci] auto fixes from pre-commit.com hooks"
