Add new ci actions
1. add dependabot config
2. add links checkers
3. update some linter configurations

--- a/.gitignore
+++ b/.gitignore
@@ -373,5 +373,11 @@ cython_debug/
 .idea/
 .idea/**
 
+# Runtime files of the project
 /run
 /run/**
+
+# Report files from lychee linter https://github.com/marketplace/actions/lychee-broken-link-checker
+./lychee
+./lychee/**
+.lycheecache
