--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 
 requires-python = ">=3.13"
 dependencies = [
+    "aiochannel>=1.3.0",
+    "multipledispatch>=1.0.0",
     "python-dotenv>=1.1.1",
     "telethon>=1.41.2",
 ]
@@ -57,6 +59,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101", "PLR2004", "SLF001", "D100", "D101", "D102", "ANN201", "ANN001", "ARG002"]
+"app/*" = ["I001", "F811"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
